modificación para especificar mejor el comportamiento del <meta name=“viewport”>

--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<meta name="description" content="En los pequeños detalles es donde se encuentran los grandes trabajos creativos, este es y sera mi lema como Web-Designer" />
 		<meta name="author" content="Siskaro" />
+
+		<!--<meta name="HandheldFriendly" content="True">-->
+		<!--<meta name="apple-mobile-web-app-capable" content="yes">-->
 
 		<!--Favicon-->
 		<link href="http://siskaro.com/favicon.ico" rel="shortcut icon" type="image/x-icon" sizes="16x16 24x24 32x32 48x48 64x64" />
