--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<meta name="description" content="En los pequeños detalles es donde se encuentran los grandes trabajos creativos, este es y sera mi lema como Web-Designer" />
+		<meta name="description" content="En los pequeños detalles es donde se encuentran los grandes trabajos creativos" />
 		<meta name="author" content="Siskaro" />
 
 		<!--<meta name="HandheldFriendly" content="True">-->
